# KL-Planner

./: .gitignore  Dokumentation.txt  README.md
KL-Planner/: Algorithm.cpp  Algorithm.h  Algorithmus.cpp  Algorithmus.h  Anmeldung.cpp  Anmeldung.h  BasicAlg.cpp  BasicAlg.h  CMakeLists.txt  Exam.cpp  Exam.h  Klausur.cpp  Klausur.h  Professor.cpp  Professor.h  Pruefung.cpp  Pruefung.h  Prüfung.cpp  Prüfung.h  Raum.cpp  Raum.h  ReadInput.cpp  ReadInput.h  Registration.cpp  Registration.h  Room.cpp  Room.h  Student.cpp  Student.h  Utility.cpp  Utility.h  gitignore  main.cpp
input/: Angebotene_Pruefungen_KL.csv
output/: result.csv
